# rust-relations-explorer

./: .gitignore  .knowledge_cache.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  builder.md  clippy.toml  example.md  heaptrack-summary.txt  lcov.info  tarpaulin-report.html
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
benches/: build_graph.rs  queries.rs
examples/: basic_build.rs  generate_svg.rs  generate_synthetic.rs  query_connected.rs
info/: plan.md
scripts/: release_from_changelog.sh
src/: app.rs  errors.rs  lib.rs  main.rs
src/cli/: mod.rs
src/graph/: mod.rs  resolver.rs
src/parser/: mod.rs
src/query/: mod.rs
src/utils/: mod.rs
src/visualization/: mod.rs
tests/: app_run_cli.rs  cache_modes.rs  cli_cache_modes.rs  cli_enum_validation.rs  cli_iteminfo_name.rs  cli_more_coverage.rs  cli_outputs.rs  cli_positional_connected.rs  cli_root_detection.rs  cli_smoke.rs  cli_svg_and_queries.rs  config_loading.rs  ignore_patterns.rs  integration_queries.rs  parser_props.rs  query_additional.rs  quiet_mode.rs  utils_tests.rs  visualization_dot.rs
