[package]
name = "knowledge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
walkdir = "2.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
rayon = "1.10"
toml = "0.8"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_graph"
harness = false

[[bench]]
name = "queries"
harness = false
