[package]
name = "rust-relations-explorer"
version = "0.1.0"
edition = "2021"
description = "Explore relationships in Rust codebases: build a knowledge graph and run queries (connected files, function usage, cycles, paths, hubs, module centrality, trait impls)."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["rust", "graph", "relations", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/rust-relations-explorer"

[lib]
name = "rust_relations_explorer"
path = "src/lib.rs"

[[bin]]
name = "rust-relations-explorer"
path = "src/main.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
walkdir = "2.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
rayon = "1.10"
toml = "0.8"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "build_graph"
harness = false

[[bench]]
name = "queries"
harness = false
